Add layout and script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="#">
+    <label for="first-number">Первое число:</label>
+    <input id="first-number" type="text" name="first-number" value="0.1">
+
+    <label for="second-number">Второе число:</label>
+    <input id="second-number" type="text" name="second-number" value="0.2">
+
+    <button id="sum-button">Сложить</button>
+  </form>
+
   <script src="js/app.js"></script>
 </body>
 </html>
